# SQL-Cli-Plus

./: README.md  pyproject.toml
src/: sqlcli_plus.py
src/messagges/: configuration.py
